// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`TaxModal should render input tab 1`] = `
<div>
  <dialog
    class="modal modal-open"
    open=""
    style="background: rgba(0, 0, 0, 0.6);"
  >
    <div
      class="card bg-base-100 border-base-300 w-full max-w-sm border shadow-2xl"
    >
      <div
        class="card-body gap-5 p-6"
      >
        <div
          class="flex items-start justify-between"
        >
          <div>
            <h2
              class="text-lg font-black tracking-tight"
            >
              Tính Thuế TNCN
            </h2>
          </div>
          <button
            class="btn btn-ghost btn-xs btn-square text-base opacity-60 hover:opacity-100"
          >
            ✕
          </button>
        </div>
        <div
          class="tabs tabs-boxed mb-4 w-full"
          role="tablist"
        >
          <button
            class="tab w-[50%] tab-active"
            role="tab"
          >
            Input
          </button>
          <button
            class="tab w-[50%] "
            role="tab"
          >
            Results
          </button>
        </div>
        <div
          class="space-y-3"
        >
          <div
            class="form-control"
          >
            <label
              class="label mb-1 p-0"
            >
              <span
                class="label-text text-xs font-medium opacity-70"
              >
                Kỳ tính thuế
              </span>
            </label>
            <select
              class="select select-bordered select-sm w-full"
            >
              <option
                value="monthly"
              >
                📅 Tháng
              </option>
              <option
                value="annual"
              >
                🗓️ Năm
              </option>
            </select>
          </div>
          <div
            class="flex justify-center"
          >
            <button
              class="btn btn-primary btn-sm flex w-full items-center gap-2"
            >
              <span>
                Gross → Net
              </span>
            </button>
          </div>
          <div
            class="form-control"
          >
            <label
              class="label mb-1 p-0"
            >
              <span
                class="label-text text-xs font-medium opacity-70"
              >
                💼 Thu nhập gộp (Gross)
              </span>
            </label>
            <input
              class="input input-sm input-bordered w-full"
              type="number"
              value="20000000"
            />
          </div>
          <div
            class="form-control"
          >
            <label
              class="label mb-1 p-0"
            >
              <span
                class="label-text text-xs font-medium opacity-70"
              >
                👨‍👩‍👧 Người phụ thuộc
              </span>
            </label>
            <input
              class="input input-sm input-bordered w-full"
              type="number"
              value="0"
            />
          </div>
          <div
            class="form-control"
          >
            <label
              class="label cursor-pointer p-0"
            >
              <span
                class="label-text text-xs font-medium opacity-70"
              >
                🛡️ Tính bảo hiểm
              </span>
              <input
                checked=""
                class="toggle toggle-primary toggle-sm"
                type="checkbox"
              />
            </label>
          </div>
        </div>
      </div>
    </div>
    <form
      class="modal-backdrop"
      method="dialog"
    >
      <button>
        close
      </button>
    </form>
  </dialog>
</div>
`;

exports[`TaxModal should show net to gross mode results 1`] = `
<div>
  <dialog
    class="modal modal-open"
    open=""
    style="background: rgba(0, 0, 0, 0.6);"
  >
    <div
      class="card bg-base-100 border-base-300 w-full max-w-sm border shadow-2xl"
    >
      <div
        class="card-body gap-5 p-6"
      >
        <div
          class="flex items-start justify-between"
        >
          <div>
            <h2
              class="text-lg font-black tracking-tight"
            >
              Tính Thuế TNCN
            </h2>
          </div>
          <button
            class="btn btn-ghost btn-xs btn-square text-base opacity-60 hover:opacity-100"
          >
            ✕
          </button>
        </div>
        <div
          class="tabs tabs-boxed mb-4 w-full"
          role="tablist"
        >
          <button
            class="tab w-[50%] "
            role="tab"
          >
            Input
          </button>
          <button
            class="tab w-[50%] tab-active"
            role="tab"
          >
            Results
          </button>
        </div>
        <div
          class="space-y-4"
        >
          <div
            class="bg-base-200 rounded-xl p-3 text-sm"
          >
            <h4
              class="mb-2 font-semibold"
            >
              🧾 Khấu trừ
            </h4>
            <div
              class="space-y-1 text-xs"
            >
              <div
                class="flex justify-between"
              >
                <span
                  class="opacity-70"
                >
                  👤 Cá nhân:
                </span>
                <span>
                  11,000,000
                   VND
                </span>
              </div>
              <div
                class="flex justify-between"
              >
                <span
                  class="opacity-70"
                >
                  👨‍👩‍👧 Phụ thuộc:
                </span>
                <span>
                  0
                   VND
                </span>
              </div>
              <div
                class="flex justify-between"
              >
                <span
                  class="opacity-70"
                >
                  💼 Bảo hiểm NLĐ:
                </span>
                <span>
                  2,431,098.696
                   VND
                </span>
              </div>
              <div
                class="divider my-1 h-1"
              />
              <div
                class="flex justify-between font-bold"
              >
                <span>
                  Tổng:
                </span>
                <span>
                  13,431,098.696
                   VND
                </span>
              </div>
            </div>
          </div>
          <div
            class="bg-base-200 rounded-xl p-3 text-sm"
          >
            <div
              class="space-y-1"
            >
              <div
                class="flex justify-between text-xs"
              >
                <span
                  class="opacity-70"
                >
                  🧾 Thu nhập chịu thuế:
                </span>
                <span>
                  9,722,222.222
                   VND
                </span>
              </div>
              <div
                class="flex justify-between text-xs"
              >
                <span
                  class="opacity-70"
                >
                  📉 Thuế hiệu dụng:
                </span>
                <span>
                  3.12
                  %
                </span>
              </div>
              <div
                class="divider my-1 h-1"
              />
              <div
                class="text-primary flex justify-between font-bold"
              >
                <span>
                  💰 Thực lĩnh:
                </span>
                <span>
                  20,000,000
                   VND
                </span>
              </div>
              <div
                class="flex justify-between text-[10px] opacity-70"
              >
                <span>
                  Tổng chi phí DN:
                </span>
                <span>
                  28,131,284.916
                   VND
                </span>
              </div>
            </div>
          </div>
          <div
            class="bg-base-200 rounded-xl p-3"
          >
            <h4
              class="mb-2 text-xs font-semibold"
            >
              🧮 Chi tiết thuế
            </h4>
            <table
              class="table-sm table w-full text-[10px]"
            >
              <thead>
                <tr>
                  <th
                    class="px-0"
                  >
                    Thuế suất
                  </th>
                  <th
                    class="px-0 text-right"
                  >
                    Chịu thuế
                  </th>
                  <th
                    class="px-0 text-right"
                  >
                    Thuế
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td
                    class="px-0"
                  >
                    5
                    %
                  </td>
                  <td
                    class="px-0 text-right"
                  >
                    5,000,000
                  </td>
                  <td
                    class="px-0 text-right"
                  >
                    250,000
                  </td>
                </tr>
                <tr>
                  <td
                    class="px-0"
                  >
                    10
                    %
                  </td>
                  <td
                    class="px-0 text-right"
                  >
                    4,722,222.222
                  </td>
                  <td
                    class="px-0 text-right"
                  >
                    472,222.222
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
    <form
      class="modal-backdrop"
      method="dialog"
    >
      <button>
        close
      </button>
    </form>
  </dialog>
</div>
`;

exports[`TaxModal should show results with computed values 1`] = `
<div>
  <dialog
    class="modal modal-open"
    open=""
    style="background: rgba(0, 0, 0, 0.6);"
  >
    <div
      class="card bg-base-100 border-base-300 w-full max-w-sm border shadow-2xl"
    >
      <div
        class="card-body gap-5 p-6"
      >
        <div
          class="flex items-start justify-between"
        >
          <div>
            <h2
              class="text-lg font-black tracking-tight"
            >
              Tính Thuế TNCN
            </h2>
          </div>
          <button
            class="btn btn-ghost btn-xs btn-square text-base opacity-60 hover:opacity-100"
          >
            ✕
          </button>
        </div>
        <div
          class="tabs tabs-boxed mb-4 w-full"
          role="tablist"
        >
          <button
            class="tab w-[50%] "
            role="tab"
          >
            Input
          </button>
          <button
            class="tab w-[50%] tab-active"
            role="tab"
          >
            Results
          </button>
        </div>
        <div
          class="space-y-4"
        >
          <div
            class="bg-base-200 rounded-xl p-3 text-sm"
          >
            <h4
              class="mb-2 font-semibold"
            >
              🧾 Khấu trừ
            </h4>
            <div
              class="space-y-1 text-xs"
            >
              <div
                class="flex justify-between"
              >
                <span
                  class="opacity-70"
                >
                  👤 Cá nhân:
                </span>
                <span>
                  11,000,000
                   VND
                </span>
              </div>
              <div
                class="flex justify-between"
              >
                <span
                  class="opacity-70"
                >
                  👨‍👩‍👧 Phụ thuộc:
                </span>
                <span>
                  0
                   VND
                </span>
              </div>
              <div
                class="flex justify-between"
              >
                <span
                  class="opacity-70"
                >
                  💼 Bảo hiểm NLĐ:
                </span>
                <span>
                  2,100,000
                   VND
                </span>
              </div>
              <div
                class="divider my-1 h-1"
              />
              <div
                class="flex justify-between font-bold"
              >
                <span>
                  Tổng:
                </span>
                <span>
                  13,100,000
                   VND
                </span>
              </div>
            </div>
          </div>
          <div
            class="bg-base-200 rounded-xl p-3 text-sm"
          >
            <div
              class="space-y-1"
            >
              <div
                class="flex justify-between text-xs"
              >
                <span
                  class="opacity-70"
                >
                  🧾 Thu nhập chịu thuế:
                </span>
                <span>
                  6,900,000
                   VND
                </span>
              </div>
              <div
                class="flex justify-between text-xs"
              >
                <span
                  class="opacity-70"
                >
                  📉 Thuế hiệu dụng:
                </span>
                <span>
                  2.20
                  %
                </span>
              </div>
              <div
                class="divider my-1 h-1"
              />
              <div
                class="text-primary flex justify-between font-bold"
              >
                <span>
                  💰 Thực lĩnh:
                </span>
                <span>
                  17,460,000
                   VND
                </span>
              </div>
              <div
                class="flex justify-between text-[10px] opacity-70"
              >
                <span>
                  Tổng chi phí DN:
                </span>
                <span>
                  24,300,000
                   VND
                </span>
              </div>
            </div>
          </div>
          <div
            class="bg-base-200 rounded-xl p-3"
          >
            <h4
              class="mb-2 text-xs font-semibold"
            >
              🧮 Chi tiết thuế
            </h4>
            <table
              class="table-sm table w-full text-[10px]"
            >
              <thead>
                <tr>
                  <th
                    class="px-0"
                  >
                    Thuế suất
                  </th>
                  <th
                    class="px-0 text-right"
                  >
                    Chịu thuế
                  </th>
                  <th
                    class="px-0 text-right"
                  >
                    Thuế
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td
                    class="px-0"
                  >
                    5
                    %
                  </td>
                  <td
                    class="px-0 text-right"
                  >
                    5,000,000
                  </td>
                  <td
                    class="px-0 text-right"
                  >
                    250,000
                  </td>
                </tr>
                <tr>
                  <td
                    class="px-0"
                  >
                    10
                    %
                  </td>
                  <td
                    class="px-0 text-right"
                  >
                    1,900,000
                  </td>
                  <td
                    class="px-0 text-right"
                  >
                    190,000
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
    <form
      class="modal-backdrop"
      method="dialog"
    >
      <button>
        close
      </button>
    </form>
  </dialog>
</div>
`;

exports[`TaxModal should switch to results tab 1`] = `
<div>
  <dialog
    class="modal modal-open"
    open=""
    style="background: rgba(0, 0, 0, 0.6);"
  >
    <div
      class="card bg-base-100 border-base-300 w-full max-w-sm border shadow-2xl"
    >
      <div
        class="card-body gap-5 p-6"
      >
        <div
          class="flex items-start justify-between"
        >
          <div>
            <h2
              class="text-lg font-black tracking-tight"
            >
              Tính Thuế TNCN
            </h2>
          </div>
          <button
            class="btn btn-ghost btn-xs btn-square text-base opacity-60 hover:opacity-100"
          >
            ✕
          </button>
        </div>
        <div
          class="tabs tabs-boxed mb-4 w-full"
          role="tablist"
        >
          <button
            class="tab w-[50%] "
            role="tab"
          >
            Input
          </button>
          <button
            class="tab w-[50%] tab-active"
            role="tab"
          >
            Results
          </button>
        </div>
        <div
          class="space-y-4"
        >
          <div
            class="bg-base-200 rounded-xl p-3 text-sm"
          >
            <h4
              class="mb-2 font-semibold"
            >
              🧾 Khấu trừ
            </h4>
            <div
              class="space-y-1 text-xs"
            >
              <div
                class="flex justify-between"
              >
                <span
                  class="opacity-70"
                >
                  👤 Cá nhân:
                </span>
                <span>
                  11,000,000
                   VND
                </span>
              </div>
              <div
                class="flex justify-between"
              >
                <span
                  class="opacity-70"
                >
                  👨‍👩‍👧 Phụ thuộc:
                </span>
                <span>
                  0
                   VND
                </span>
              </div>
              <div
                class="flex justify-between"
              >
                <span
                  class="opacity-70"
                >
                  💼 Bảo hiểm NLĐ:
                </span>
                <span>
                  2,100,000
                   VND
                </span>
              </div>
              <div
                class="divider my-1 h-1"
              />
              <div
                class="flex justify-between font-bold"
              >
                <span>
                  Tổng:
                </span>
                <span>
                  13,100,000
                   VND
                </span>
              </div>
            </div>
          </div>
          <div
            class="bg-base-200 rounded-xl p-3 text-sm"
          >
            <div
              class="space-y-1"
            >
              <div
                class="flex justify-between text-xs"
              >
                <span
                  class="opacity-70"
                >
                  🧾 Thu nhập chịu thuế:
                </span>
                <span>
                  6,900,000
                   VND
                </span>
              </div>
              <div
                class="flex justify-between text-xs"
              >
                <span
                  class="opacity-70"
                >
                  📉 Thuế hiệu dụng:
                </span>
                <span>
                  2.20
                  %
                </span>
              </div>
              <div
                class="divider my-1 h-1"
              />
              <div
                class="text-primary flex justify-between font-bold"
              >
                <span>
                  💰 Thực lĩnh:
                </span>
                <span>
                  17,460,000
                   VND
                </span>
              </div>
              <div
                class="flex justify-between text-[10px] opacity-70"
              >
                <span>
                  Tổng chi phí DN:
                </span>
                <span>
                  24,300,000
                   VND
                </span>
              </div>
            </div>
          </div>
          <div
            class="bg-base-200 rounded-xl p-3"
          >
            <h4
              class="mb-2 text-xs font-semibold"
            >
              🧮 Chi tiết thuế
            </h4>
            <table
              class="table-sm table w-full text-[10px]"
            >
              <thead>
                <tr>
                  <th
                    class="px-0"
                  >
                    Thuế suất
                  </th>
                  <th
                    class="px-0 text-right"
                  >
                    Chịu thuế
                  </th>
                  <th
                    class="px-0 text-right"
                  >
                    Thuế
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td
                    class="px-0"
                  >
                    5
                    %
                  </td>
                  <td
                    class="px-0 text-right"
                  >
                    5,000,000
                  </td>
                  <td
                    class="px-0 text-right"
                  >
                    250,000
                  </td>
                </tr>
                <tr>
                  <td
                    class="px-0"
                  >
                    10
                    %
                  </td>
                  <td
                    class="px-0 text-right"
                  >
                    1,900,000
                  </td>
                  <td
                    class="px-0 text-right"
                  >
                    190,000
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
    <form
      class="modal-backdrop"
      method="dialog"
    >
      <button>
        close
      </button>
    </form>
  </dialog>
</div>
`;
